--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/font": "13.1.6",
+    "@rainbow-me/rainbowkit": "^0.8.1",
+    "daisyui": "^2.49.0",
+    "ethers": "^5.7.2",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
+    "wagmi": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
